// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render a BLACK label 1`] = `
<View
  style={
    Array [
      Object {
        "paddingBottom": 13.333333333333332,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 26.666666666666664,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(255,255,255,0.9)",
          "fontSize": 16,
          "letterSpacing": 1,
        },
        Object {
          "color": "black",
        },
      ]
    }
  >
    DEFAULT TEST
  </Text>
</View>
`;

exports[`Label should render a WHITE label 1`] = `
<View
  style={
    Array [
      Object {
        "paddingBottom": 13.333333333333332,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 26.666666666666664,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(255,255,255,0.9)",
          "fontSize": 16,
          "letterSpacing": 1,
        },
        Object {
          "color": "white",
        },
      ]
    }
  >
    LIGHT TEST
  </Text>
</View>
`;

exports[`Section should render a section label 1`] = `
<View
  style={
    Array [
      Object {
        "paddingBottom": 0,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 0,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 13.333333333333332,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 26.666666666666664,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgba(255,255,255,0.9)",
            "fontSize": 16,
            "letterSpacing": 1,
          },
          Object {
            "color": "black",
          },
        ]
      }
    >
      TEST
    </Text>
  </View>
</View>
`;
